change backend call for getting missing training to get workers first and then get training, change html to show multi line rows differently

--- a/src/app/features/training-and-qualifications/expired-and-expiring-training/expired-and-expiring-training.component.html
+++ b/src/app/features/training-and-qualifications/expired-and-expiring-training/expired-and-expiring-training.component.html
@@ -30,7 +30,7 @@
       <ng-container *ngFor="let worker of workers">
         <ng-container *ngFor="let training of worker.workerTraining; let i = index">
           <tr
-            class="govuk-training-table__row govuk-util__vertical-align-top"
+            class="govuk-table__row govuk-util__vertical-align-top"
             [attr.data-testid]="'table-row-' + worker.NameOrIdValue + '-' + i"
           >
             <td
