pass category id to add edit component from the missing mandatory training component

--- a/src/app/features/training-and-qualifications/missing-mandatory-training/missing-mandatory-training-status.component.html
+++ b/src/app/features/training-and-qualifications/missing-mandatory-training/missing-mandatory-training-status.component.html
@@ -86,7 +86,7 @@
                     'training-and-qualifications-record',
                     worker.uid,
                     'add-training',
-                    { trainingCategory: { category: training.category } | json }
+                    { trainingCategory: training | json }
                   ]"
                   >Add</a
                 >
