change search bar label on expired, expires soon and missing training, and order expired and expires soon training alphabetically if a worker has multiple

--- a/src/app/features/training-and-qualifications/expired-and-expiring-training/expired-and-expiring-training.component.html
+++ b/src/app/features/training-and-qualifications/expired-and-expiring-training/expired-and-expiring-training.component.html
@@ -13,6 +13,7 @@
   [sortByParamMap]="sortByParamMap"
   [sortByValue]="sortByValue"
   [sortOptions]="sortTrainingOptions"
+  label="Search by name or ID number"
   accessibleLabel="staff training records"
   (fetchData)="getTrainingByStatus($event)"
 >
