--- a/src/app/features/new-dashboard/dashboard/dashboard.component.html
+++ b/src/app/features/new-dashboard/dashboard/dashboard.component.html
@@ -2,6 +2,17 @@
   <h1>This is the New Dashboard</h1>
 </div>
 
+<div class="govuk-grid-column-one-half govuk-util__align-right">
+  <a
+    role="button"
+    draggable="false"
+    class="govuk-button"
+    [routerLink]="['/workplace', '8ce87e7e-92e3-479a-8914-bd799c3575f8', 'staff-record', 'create-staff-record']"
+  >
+    Add a staff record
+  </a>
+</div>
+
 <!-- <div style="background-color: #e6e5e3">
       <div class="govuk-width-container">
         <app-new-tabs (selectedTabClick)="tabClickEvent($event)" (viewTab)="handleTabChange($event)">
