--- a/src/app/features/new-dashboard/dashboard-wrapper.component.html
+++ b/src/app/features/new-dashboard/dashboard-wrapper.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="standAloneAccount; else parentSubDashboard">
+<ng-container *ngIf="standAloneAccount && newHomeDesignFlag; else parentSubDashboard">
   <app-new-dashboard></app-new-dashboard>
 </ng-container>
 <ng-template #parentSubDashboard>
