--- a/src/app/shared/components/staff-record-summary/basic-record/basic-record.component.html
+++ b/src/app/shared/components/staff-record-summary/basic-record/basic-record.component.html
@@ -16,7 +16,7 @@
 
   <div class="govuk-summary-list__row">
     <dt class="govuk-summary-list__key">Main job role</dt>
-    <dd class="govuk-summary-list__value" [ngClass]="{ 'govuk-!-padding-left-9': !mandatoryDetailsPage }">
+    <dd class="govuk-summary-list__value" []="{ 'govuk-!-padding-left-9': !mandatoryDetailsPage }">
       <app-summary-record-value
         [wdfView]="wdfView"
         [wdfValue]="worker.wdf?.mainJob"
