--- a/src/app/core/components/standAloneAccount/standAloneAccount.component.html
+++ b/src/app/core/components/standAloneAccount/standAloneAccount.component.html
@@ -1,31 +1,29 @@
 <div id="content">
-  <div style="background-color: #e6e5e3">
+  <div class="asc-tabs-container">
     <div class="govuk-width-container">
-      <app-new-tabs (selectedTabClick)="tabClickEvent($event)" (viewTab)="handleTabChange($event)">
-        <app-new-tab title="Home"></app-new-tab>
-        <app-new-tab *ngIf="workplaceUid && canViewEstablishment" title="Workplace"></app-new-tab>
-        <app-new-tab *ngIf="workplaceUid && canViewListOfWorkers" title="Staff records"></app-new-tab>
-        <app-new-tab *ngIf="workplaceUid && canViewListOfWorkers" title="Training and qualifications"></app-new-tab>
-        <app-new-tab *ngIf="workplaceUid && canViewBenchmarks" title="Benchmarks"></app-new-tab>
+      <app-new-tabs (selectedTabClick)="tabClickEvent($event)" (viewTab)="handleTabChange($event)" [tabs]="tabs">
       </app-new-tabs>
     </div>
   </div>
 
-  <div [ngStyle]="{ 'background-color': dashboardView ? '#f3f2f1' : 'white' }">
-    <div class="govuk-width-container">
-      <app-back-link></app-back-link>
-      <app-new-back-link></app-new-back-link>
-      <app-breadcrumbs></app-breadcrumbs>
-      <app-alert></app-alert>
-      <div class="govuk-!-padding-top-9" *ngIf="dashboardView">
-        <app-dashboard-header></app-dashboard-header>
+  <div class="asc-header-section">
+    <div class="asc-header-section__top">
+      <div class="govuk-width-container">
+        <app-back-link></app-back-link>
+        <app-new-back-link></app-new-back-link>
+        <app-breadcrumbs></app-breadcrumbs>
+        <app-alert></app-alert>
       </div>
+    </div>
+    <div class="govuk-width-container govuk-!-padding-top-9" *ngIf="dashboardView">
+      <app-dashboard-header></app-dashboard-header>
     </div>
   </div>
   <div class="govuk-width-container">
     <main
       id="main-content"
       class="govuk-main-wrapper app-main-class govuk-util__no-focus"
+      [ngClass]="{ 'govuk-!-padding-top-0': dashboardView }"
       #content
       role="main"
       tabindex="-1"
