--- a/src/app/features/new-dashboard/dashboard/dashboard.component.html
+++ b/src/app/features/new-dashboard/dashboard/dashboard.component.html
@@ -1,116 +1,16 @@
-<div>
-  <h1>This is the New Dashboard</h1>
-</div>
-
-<div class="govuk-grid-column-one-half govuk-util__align-right">
-  <a
-    role="button"
-    draggable="false"
-    class="govuk-button"
-    [routerLink]="['/workplace', '8ce87e7e-92e3-479a-8914-bd799c3575f8', 'staff-record', 'create-staff-record']"
-  >
-    Add a staff record
-  </a>
-</div>
-
-<!-- <div style="background-color: #e6e5e3">
-      <div class="govuk-width-container">
-        <app-new-tabs (selectedTabClick)="tabClickEvent($event)" (viewTab)="handleTabChange($event)">
-          <app-new-tab title="Home"></app-new-tab>
-          <app-new-tab *ngIf="workplace && canViewEstablishment" title="Workplace"></app-new-tab>
-          <app-new-tab *ngIf="workplace && canViewListOfWorkers" title="Staff records"></app-new-tab>
-          <app-new-tab *ngIf="workplace && canViewListOfWorkers" title="Training and qualifications"></app-new-tab>
-          <app-new-tab *ngIf="workplace && canViewBenchmarks" title="Benchmarks"></app-new-tab>
-        </app-new-tabs>
+<div class="govuk-width-container">
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-full">
+      <div [ngSwitch]="selectedTab">
+        <app-new-home-tab *ngSwitchCase="'home'" [workplace]="workplace"></app-new-home-tab>
+        <app-new-workplace-tab *ngSwitchCase="'workplace'" [workplace]="workplace"></app-new-workplace-tab>
+        <app-new-staff-tab *ngSwitchCase="'staff-records'" [workplace]="workplace"></app-new-staff-tab>
+        <app-new-training-tab
+          *ngSwitchCase="'training-and-qualifications'"
+          [workplace]="workplace"
+        ></app-new-training-tab>
+        <app-new-benchmarks-tab *ngSwitchCase="'benchmarks'" class="asc-benchmarks-tab"></app-new-benchmarks-tab>
       </div>
     </div>
-
-    <div style="background-color: #f3f2f1">
-      <div class="govuk-width-container">
-        <app-back-link></app-back-link>
-        <app-new-back-link></app-new-back-link>
-        <app-breadcrumbs></app-breadcrumbs>
-        <app-alert></app-alert>
-        <div class="govuk-!-padding-top-9">
-          <app-dashboard-header></app-dashboard-header>
-        </div>
-      </div>
-    </div>
-
-    <div class="govuk-width-container">
-      <div class="govuk-grid-row">
-        <div class="govuk-grid-column-full">
-          <app-home-tab
-            *ngIf="selectedTab === 'Home'"
-            [workplace]="workplace"
-            [workerCount]="workerCount"
-          ></app-home-tab>
-          <app-workplace-tab
-            *ngIf="selectedTab === 'Workplace'"
-            [workplace]="workplace"
-            [workerCount]="workerCount"
-          ></app-workplace-tab>
-          <app-staff-records-tab
-            *ngIf="selectedTab === 'Staff records'"
-            [workplace]="workplace"
-            [workers]="workers"
-            [workerCount]="workerCount"
-          ></app-staff-records-tab>
-          <app-training-and-qualifications-tab
-            *ngIf="selectedTab === 'Training and qualifications'"
-            [workplace]="workplace"
-            [workers]="workers"
-            [workerCount]="workerCount"
-            [trainingCounts]="trainingCounts"
-          ></app-training-and-qualifications-tab>
-          <app-benchmarks-tab
-            *ngIf="selectedTab === 'Benchmarks'"
-            [workplace]="workplace"
-            class="asc-benchmarks-tab"
-          ></app-benchmarks-tab> -->
-<!-- <app-tabs (selectedTabClick)="tabClickEvent($event)">
-        <app-tab [title]="'Home'">
-          <app-home-tab [workplace]="workplace" [workerCount]="workerCount"></app-home-tab>
-        </app-tab>
-
-        <app-tab
-          *ngIf="workplace && canViewEstablishment"
-          [title]="'Workplace'"
-          [redAlert]="workplace?.employerType && (showCQCDetailsBanner || showSharingPermissionsBanner)"
-        >
-          <app-workplace-tab [workplace]="workplace" [workerCount]="workerCount"></app-workplace-tab>
-        </app-tab>
-
-        <app-tab *ngIf="workplace && canViewListOfWorkers" [alert]="totalStaffRecords === 0" [title]="'Staff records'">
-          <app-staff-records-tab
-            [workplace]="workplace"
-            [workers]="workers"
-            [workerCount]="workerCount"
-          ></app-staff-records-tab>
-        </app-tab>
-
-        <app-tab
-          *ngIf="workplace && canViewListOfWorkers"
-          [alert]="trainingAlert === 1"
-          [redAlert]="trainingAlert === 2"
-          [title]="'Training and qualifications'"
-        >
-          <app-training-and-qualifications-tab
-            [workplace]="workplace"
-            [workers]="workers"
-            [workerCount]="workerCount"
-            [trainingCounts]="trainingCounts"
-          ></app-training-and-qualifications-tab>
-        </app-tab>
-
-        <app-tab *ngIf="workplace && canViewBenchmarks" [title]="'Benchmarks'">
-          <app-benchmarks-tab class="asc-benchmarks-tab" [workplace]="workplace"></app-benchmarks-tab>
-        </app-tab>
-
-        <app-tab *ngIf="workplace && canViewEstablishment && wdfNewDesignFlag" [title]="'WDF'">
-          <app-wdf-tab [workplace]="workplace"></app-wdf-tab>
-        </app-tab>
-      </app-tabs> -->
-<!-- </div>
-      </div>
-    </div> -->
+  </div>
+</div>
