add tests for dashboard wrapper and stand alone account

--- a/src/app/core/components/standAloneAccount/standAloneAccount.component.html
+++ b/src/app/core/components/standAloneAccount/standAloneAccount.component.html
@@ -15,7 +15,7 @@
         <app-alert></app-alert>
       </div>
     </div>
-    <div class="govuk-width-container govuk-!-padding-top-9" *ngIf="dashboardView">
+    <div class="govuk-width-container govuk-!-padding-top-9" *ngIf="dashboardView" data-testid="dashboard-header">
       <app-dashboard-header></app-dashboard-header>
     </div>
   </div>
