--- a/src/app/features/new-dashboard/dashboard-wrapper.component.html
+++ b/src/app/features/new-dashboard/dashboard-wrapper.component.html
@@ -1,6 +1,6 @@
 <ng-container *ngIf="standAloneAccount && newHomeDesignFlag; else parentSubDashboard">
-  <app-new-dashboard></app-new-dashboard>
+  <app-new-dashboard data-testid="standAloneDashboard"></app-new-dashboard>
 </ng-container>
 <ng-template #parentSubDashboard>
-  <app-dashboard></app-dashboard>
+  <app-dashboard data-testid="parentSubDashboard"></app-dashboard>
 </ng-template>
