tidy up out of date feature flags in the service

--- a/src/app/features/bulk-upload/about-bulk-upload/about-bulk-upload.component.html
+++ b/src/app/features/bulk-upload/about-bulk-upload/about-bulk-upload.component.html
@@ -43,7 +43,7 @@
       Return to bulk upload
     </a>
   </div>
-  <div *ngIf="bulkUploadHelpFlag" class="govuk-grid-column-one-third">
+  <div class="govuk-grid-column-one-third">
     <div class="govuk-!-margin-top-6">
       <app-bulk-upload-related-content
         [showViewLastBulkUpload]="false"
