change styling on tabs to show focus state

--- a/src/app/core/components/standAloneAccount/standAloneAccount.component.scss
+++ b/src/app/core/components/standAloneAccount/standAloneAccount.component.scss
@@ -3,8 +3,7 @@
 }
 
 .asc-header-section {
-  background-color: #f3f2f1;
-
+  background-color: govuk-colour('light-grey');
   &__top {
     border-bottom: 1px solid #e6e5e3;
   }
