--- a/src/app/shared/components/new-tabs/new-tabs.component.scss
+++ b/src/app/shared/components/new-tabs/new-tabs.component.scss
@@ -7,6 +7,7 @@
   align-items: stretch;
   padding: 0;
   margin: 0;
+  border-bottom: none;
 }
 
 li {
@@ -15,7 +16,7 @@ li {
 }
 
 .asc-active {
-  border-bottom: 4px solid govuk-colour('blue');
+  border-bottom: 6px solid govuk-colour('blue');
 }
 
 .asc-tab {
