refactor new tabs component putting a lot of select tab functionality into a subscription

--- a/src/app/core/components/standAloneAccount/standAloneAccount.component.html
+++ b/src/app/core/components/standAloneAccount/standAloneAccount.component.html
@@ -1,7 +1,7 @@
 <div id="content">
   <div class="asc-tabs-container">
     <div class="govuk-width-container">
-      <app-new-tabs (selectedTabClick)="tabClickEvent($event)" (viewTab)="handleTabChange($event)" [tabs]="tabs">
+      <app-new-tabs (selectedTabClick)="tabClickEvent($event)" [tabs]="tabs" [dashboardView]="dashboardView">
       </app-new-tabs>
     </div>
   </div>
