--- a/src/app/shared/components/new-tabs/new-tabs.component.scss
+++ b/src/app/shared/components/new-tabs/new-tabs.component.scss
@@ -3,14 +3,19 @@
 .asc-tabs-bar {
   list-style: none;
   display: flex;
+  align-items: stretch;
   padding: 0;
   margin: 0;
   border-bottom: none;
 }
 
 li {
-  padding: 15px 28px !important;
+  padding: 12px 28px !important;
   background-color: #e6e5e3 !important;
+  display: flex;
+  align-items: center;
+  border-bottom: 8px solid #e6e5e3;
+  border-top: 8px solid #e6e5e3;
 }
 
 .asc-active {
