create new dashboard header, and add workplace summary to the new workplace tab

--- a/src/app/core/components/standAloneAccount/standAloneAccount.component.html
+++ b/src/app/core/components/standAloneAccount/standAloneAccount.component.html
@@ -16,7 +16,7 @@
       </div>
     </div>
     <div class="govuk-width-container govuk-!-padding-top-9" *ngIf="dashboardView" data-testid="dashboard-header">
-      <app-dashboard-header></app-dashboard-header>
+      <app-new-dashboard-header></app-new-dashboard-header>
     </div>
   </div>
   <div class="govuk-width-container">
