--- a/src/app/features/new-dashboard/workplace-tab/workplace-tab.component.html
+++ b/src/app/features/new-dashboard/workplace-tab/workplace-tab.component.html
@@ -1,3 +1,5 @@
-<div>
-  <h1>This is the New Workplace tab</h1>
+<div class="govuk-grid-row govuk-!-margin-top-9">
+  <div class="govuk-grid-column-full">
+    <app-workplace-summary [workplace]="workplace"></app-workplace-summary>
+  </div>
 </div>
