--- a/src/app/features/new-dashboard/workplace-tab/workplace-tab.component.html
+++ b/src/app/features/new-dashboard/workplace-tab/workplace-tab.component.html
@@ -1,5 +1,10 @@
 <div class="govuk-grid-row govuk-!-margin-top-9">
   <div class="govuk-grid-column-full">
-    <app-workplace-summary [workplace]="workplace"></app-workplace-summary>
+    <app-new-workplace-summary
+      [workplace]="workplace"
+      [workerCount]="workerCount"
+      [return]="summaryReturnUrl"
+      data-testid="workplace-summary"
+    ></app-new-workplace-summary>
   </div>
 </div>
