add breadcrumbs to the workplace tab, add styling to the dashboard header to keep the height the same with and without breadcrumbs

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <a class="govuk-skip-link" href="#main-content" (click)="skip($event)">Skip to main content</a>
   <app-header></app-header>
 
-  <ng-container *ngIf="standAloneAccount && newHomeDesignFlag; else otherView">
+  <ng-container *ngIf="standAloneAccount && newHomeDesignFlag && !isAdminSection; else otherView">
     <app-stand-alone-account [dashboardView]="dashboardView"></app-stand-alone-account>
   </ng-container>
   <ng-template #otherView>
