--- a/src/app/core/components/standAloneAccount/standAloneAccount.component.html
+++ b/src/app/core/components/standAloneAccount/standAloneAccount.component.html
@@ -15,8 +15,10 @@
         <app-alert></app-alert>
       </div>
     </div>
-    <div class="govuk-width-container govuk-!-padding-top-9" *ngIf="dashboardView" data-testid="dashboard-header">
-      <app-new-dashboard-header></app-new-dashboard-header>
+    <div *ngIf="dashboardView">
+      <div class="govuk-width-container" data-testid="dashboard-header">
+        <app-new-dashboard-header></app-new-dashboard-header>
+      </div>
     </div>
   </div>
   <div class="govuk-width-container">
