--- a/src/app/features/new-dashboard/dashboard-header/dashboard-header.component.html
+++ b/src/app/features/new-dashboard/dashboard-header/dashboard-header.component.html
@@ -1,4 +1,4 @@
-<div class="govuk-grid-row govuk-!-padding-bottom-5 govuk-!-margin-top-8 govuk__flex govuk__align-items-flex-end">
+<div class="govuk-grid-row govuk-!-padding-bottom-5 govuk__flex govuk__align-items-flex-end">
   <div class="govuk-grid-column-one-half">
     <ng-container *ngIf="selectedTab === 'home'; else otherTab">
       <h1 class="govuk-heading-l govuk-!-margin-bottom-0">
