--- a/src/app/shared/components/breadcrumbs/breadcrumbs.component.html
+++ b/src/app/shared/components/breadcrumbs/breadcrumbs.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="breadcrumbs">
-  <div class="govuk-breadcrumbs">
+  <div class="govuk-breadcrumbs govuk-!-margin-top-0 govuk-!-padding-top-3">
     Go back to:
     <ol class="govuk-breadcrumbs__list">
       <li
