add click event boolean to tabs to prevent unwanted redirect to the dashboard, add conditional height to dashboard header

--- a/src/app/core/components/standAloneAccount/standAloneAccount.component.html
+++ b/src/app/core/components/standAloneAccount/standAloneAccount.component.html
@@ -6,7 +6,7 @@
     </div>
   </div>
 
-  <div class="asc-header-section">
+  <div class="asc-header-section" [class.asc-header-section__no-fixed-height]="!dashboardView">
     <div class="asc-header-section__top">
       <div class="govuk-width-container">
         <app-back-link></app-back-link>
