--- a/src/app/core/components/standAloneAccount/standAloneAccount.component.scss
+++ b/src/app/core/components/standAloneAccount/standAloneAccount.component.scss
@@ -6,10 +6,14 @@
 
 .asc-header-section {
   background-color: govuk-colour('light-grey');
-  height: 226px;
+  height: 200px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+
+  &__no-fixed-height {
+    height: unset;
+  }
 
   &__top {
     border-bottom: 1px solid #e6e5e3;
