fix(trainingAndQualsSnaggingList): Fixed typo for null mandatory training category, removed boarders for dud multiple training search, removed inset for long term absence page, updated select record tpye to be update on submit and have function call not be called as a click event and removed full stop from no staff records alert

--- a/src/app/features/workers/long-term-absence/long-term-absence.component.html
+++ b/src/app/features/workers/long-term-absence/long-term-absence.component.html
@@ -7,10 +7,10 @@
       <span class="govuk-caption-xl">{{ worker.nameOrId }}</span>
       <h1 class="govuk-heading-l">Flag long-term absence</h1>
 
-      <div class="govuk-inset-text govuk-!-margin-top-0">
+      <p class="govuk-!-padding-top-3 govuk-!-padding-bottom-3 govuk-!-margin-bottom-6">
         When you flag a member of staff as long-term absent, a label appears next to their name under training and
         qualifications. The flag can be used to show why their training records may be out of date.
-      </div>
+      </p>
 
       <div class="govuk-form-group" [class.govuk-form-group--error]="submitted && form.invalid">
         <fieldset class="govuk-fieldset">
