--- a/src/app/shared/components/training-and-qualifications-tab/training-and-qualifications-tab.component.html
+++ b/src/app/shared/components/training-and-qualifications-tab/training-and-qualifications-tab.component.html
@@ -52,6 +52,6 @@
 <ng-template #noStaffRecords>
   <app-inset-text data-testid="noStaffRecordsWarningBanner" color="warning" [removeTopMargin]="true"
     >You need to <a href="#" (click)="navigateToStaffRecords($event)">add staff records</a> before you start to add
-    training and qualifications.</app-inset-text
+    training and qualifications</app-inset-text
   >
 </ng-template>
