--- a/src/app/features/new-dashboard/dashboard-header/dashboard-header.component.html
+++ b/src/app/features/new-dashboard/dashboard-header/dashboard-header.component.html
@@ -8,7 +8,7 @@
     <ng-template #otherTab>
       <h1 class="govuk-heading-l govuk-!-margin-bottom-0">
         <span class="govuk-caption-xl govuk-!-margin-bottom-0">{{ workplace?.name }}</span>
-        Workplace
+        {{ tabsMap[selectedTab] }}
       </h1>
     </ng-template>
     <p class="govuk-!-font-size-16 govuk-!-margin-top-2 govuk-!-margin-bottom-0">
@@ -28,6 +28,16 @@
           <a href="mailto:ascwds-support@skillsforcare.org.uk">ascwds-support@skillsforcare.org.uk</a>
         </span>
       </p>
+    </div>
+    <div *ngIf="selectedTab === 'staff-records' && canAddWorker" class="govuk-util__align-right">
+      <a
+        role="button"
+        draggable="false"
+        class="govuk-button"
+        [routerLink]="['/workplace', this.workplace.uid, 'staff-record', 'create-staff-record']"
+      >
+        Add a staff record
+      </a>
     </div>
   </div>
 </div>
