add rendering of staff records in staff records tab

--- a/src/app/features/new-dashboard/dashboard/dashboard.component.html
+++ b/src/app/features/new-dashboard/dashboard/dashboard.component.html
@@ -12,6 +12,7 @@
           *ngSwitchCase="'staff-records'"
           [workplace]="workplace"
           [workers]="workers"
+          [workerCount]="workerCount"
         ></app-new-staff-tab>
         <app-new-training-tab
           *ngSwitchCase="'training-and-qualifications'"
