--- a/src/app/features/new-dashboard/home-tab/home-tab.component.html
+++ b/src/app/features/new-dashboard/home-tab/home-tab.component.html
@@ -1,3 +1,4 @@
-<div>
+<app-new-dashboard-header></app-new-dashboard-header>
+<div class="govuk-width-container">
   <h1>This is the New Home tab</h1>
 </div>
