--- a/src/app/core/components/standAloneAccount/standAloneAccount.component.scss
+++ b/src/app/core/components/standAloneAccount/standAloneAccount.component.scss
@@ -6,10 +6,10 @@
 
 .asc-header-section {
   background-color: govuk-colour('light-grey');
-  height: 215px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  // height: 215px;
+  // display: flex;
+  // flex-direction: column;
+  // justify-content: space-between;
 
   &__no-fixed-height {
     height: unset;
