--- a/src/app/features/new-dashboard/workplace-tab/workplace-tab.component.html
+++ b/src/app/features/new-dashboard/workplace-tab/workplace-tab.component.html
@@ -1,10 +1,9 @@
-<div class="govuk-grid-row govuk-!-margin-top-9">
-  <div class="govuk-grid-column-full">
-    <app-new-workplace-summary
-      [workplace]="workplace"
-      [workerCount]="workerCount"
-      [return]="summaryReturnUrl"
-      data-testid="workplace-summary"
-    ></app-new-workplace-summary>
-  </div>
+<app-new-dashboard-header></app-new-dashboard-header>
+<div class="govuk-width-container govuk-!-margin-top-9">
+  <app-new-workplace-summary
+    [workplace]="workplace"
+    [workerCount]="workerCount"
+    [return]="summaryReturnUrl"
+    data-testid="workplace-summary"
+  ></app-new-workplace-summary>
 </div>
